<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ticket QR Scanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scan_page">scanPage</string>
    <string name="title_activity_qtscan_page">QTscanPage</string>
    <string name="title_activity_qrscanner_page">QRscannerPage</string>
    <string name="Success">Success</string>
    <string name="Failure">Failure</string>
    <string name="title_activity_event_selector">EventSelector</string>
    <string name="Select">Select Event</string>
    <string name="Events">To Events</string>
    <string name="title_activity_searchby_date">SearchbyDate</string>
    <string name="title_activity_splash_screen">Ticket QR Scanner</string>
    <string name="QRScanner">QR Scanner</string>
    <string name="cs4720">CS 4720 Mobile Project</string>
    <string name="justin">Justin Cajayon (jhc3ej)</string>
    <string name="marlena">Marlena Kauer (mak4wd)</string>
    <string name="jed">Jed Divina (jed4hv)</string>
    <string name="title">Ticket QR Scanner</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="searchbutton">Search</string>
    <string name="title_activity_event_confirmation">eventConfirmation</string>
    <string name="eventidsearch">Search event by ID (ex. 14581147605)</string>
    <string name="lightswitch">Turn Off Lights</string>

</resources>
